// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test OrderQuantityWithDbType should match snapshot 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
      style="height: 100%;"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                reportStatistics.orderDbTypeScale.title
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  aria-label="info-circle"
                  class="anticon anticon-info-circle text-orange ant-tooltip-open"
                  data-testid="order-db-type-scale-tips"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="info-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                    <path
                      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          anglefield="count"
          color="[\\"#1890ff\\",\\"#ffa940\\",\\"#eb2f96\\",\\"#ff9c6e\\",\\"#fadb14\\",\\"#bae637\\",\\"#ffd666\\",\\"#52c41a\\",\\"#5cdbd3\\"]"
          colorfield="instance_type"
          data="[{\\"instance_type\\":\\"Mysql\\",\\"count\\":27},{\\"instance_type\\":\\"Oracle\\",\\"count\\":25},{\\"instance_type\\":\\"Redis\\",\\"count\\":18},{\\"instance_type\\":\\"MongoDB\\",\\"count\\":15},{\\"instance_type\\":\\"TiDB\\",\\"count\\":5}]"
          h="2"
          height="184"
          innerradius="0.6"
          interactions="[{\\"type\\":\\"element-active\\"}]"
          label="{\\"type\\":\\"inner\\",\\"offset\\":\\"-50%\\",\\"content\\":\\"{value}\\",\\"style\\":{\\"textAlign\\":\\"center\\",\\"fontSize\\":14}}"
          legend="{\\"offsetX\\":-30}"
          locale="zh-CN"
          padding="auto"
          radius="1"
          theme="light"
        />
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-tooltip"
        style="opacity: 0; pointer-events: none;"
      >
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-arrow"
          >
            <span
              class="ant-tooltip-arrow-content"
            />
          </div>
          <div
            class="ant-tooltip-inner"
            role="tooltip"
          >
            reportStatistics.orderDbTypeScale.tips
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test OrderQuantityWithDbType should match snapshot when request goes wrong 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              reportStatistics.orderDbTypeScale.title
            </div>
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle text-orange"
                data-testid="order-db-type-scale-tips"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-result ant-result-error"
        style="padding: 10px;"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        >
          common.request.noticeFailTitle
        </div>
        <div
          class="ant-result-subtitle"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;
